@@ -1,2 +1,1 @@
-(*) STE
 (*) LOOCV
